--- a/index.html
+++ b/index.html
@@ -4,30 +4,93 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Your Full Name's Portfolio</title>
+    <title>seekwens</title>
+
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+
+
 </head>
 <body>
 
+    <section class="definition-section">
+        <!-- Word and Pronunciation Column -->
+        <div class="word-column">
+            <h2>sequence</h2>
+            <p class="pronunciation">noun - /ˈsiːkwəns/
+            </p>
+        </div>
+
+        <!-- Definition Column -->
+        <div class="definition-column">
+            <p>[countable] sequence (of something): a set of related events, movements, or items that follow each other in a particular order.
+
+            </p>
+        </div>
+    </section>
+
     <!-- Header Section -->
     <header>
-        <h1>Your Full Name</h1>
-        <p>Web Developer | Python Enthusiast</p>
+        <h1>Seeking your data's potential, one sequence a time</h1>
     </header>
 
-    <!-- Main Content Section -->
-    <section>
-        <h2>About Me</h2>
-        <p>Write a brief introduction about yourself.</p>
 
-        <!-- Add more sections as needed, such as skills, projects, etc. -->
+
+    <section class="two-columns">
+        <!-- About Me Column -->
+        <div class="column">
+            <a href="about.html"><button class="action-button">About Me</button></a>
+        </div>
+
+        <!-- Contact Me Column -->
+        <div class="column">
+             <a href="contact.html"><button class="action-button">Contact Us</button></a>
+        </div>
     </section>
 
-    <!-- Contact Section -->
-    <section>
-        <h2>Contact</h2>
-        <p>Email: your.email@example.com</p>
-        <p>LinkedIn: linkedin.com/in/your-username</p>
+    
+    <section class="paragraph-section">
+        <!-- Paragraph 1 -->
+        <div class="paragraph">
+            <h2>Sequence Analysis</h2>
+            <p>Unlock insight within your data sequences </p>
+            <a href="#">See example</a>
+        </div>
+        <div class="image-container">
+            <img src="img/placeholder.png" alt="Image 1">
+        </div>
     </section>
+
+    <!-- Paragraph 2 -->
+    <section class="paragraph-section">
+        <div class="image-container">
+            <img src="img/placeholder.png" alt="Image 2">
+        </div>
+        <div class="paragraph">
+            <h2>Signal Processing</h2>
+            <p>Listen and understand your signals</p>
+            <a href="#">See example</a>
+        </div>
+    </section>
+
+    <!-- Paragraph 3 -->
+    <section class="paragraph-section">
+        <div class="paragraph">
+            <h2>Time Series Analysis</h2>
+            <p>Empower decisions through our time series expertise</p>
+            <a href="#">See example</a>
+        </div>
+        <div class="image-container">
+            <img src="img/placeholder.png" alt="Image 3">
+        </div>
+    </section>
+
+    
 
     <!-- Footer Section -->
     <footer>
