good nav comportment and background image

--- a/index.html
+++ b/index.html
@@ -1,32 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>seekwens</title>
-
-
-
+    <title>Seekwens</title>
 </head>
+
+
+<nav class="nav-header" id="mainNav">
+    <ul>
+        <li><a href="#services"> SERVICES </a></li>
+        <li><a href="#aboutme"> ABOUT ME </a></li>
+        <li><a href="#contact"> CONTACT </a></li>
+    </ul>
+</nav>
+
 <body>
 
 
-    <nav class="nav-header">
-        <ul>
-            <li><a href="#services"> SERVICE </a></li>
-            <li><a href="#aboutme"> ABOUT ME </a></li>
-            <li><a href="#portfolio"> PORTFOLIO </a></li>
-            <li><a href="#contact"> CONTACT </a></li>
-
-        </ul>
-    </nav>
-
-
-
+    <div class="background-image">
     <section class="definition-section">
-        <div class="background-image">
-            <!-- Word and Pronunciation Column -->
             <div class="word-column">
                 <h2>sequence</h2>
                 <p class="pronunciation">noun - /ˈsiːkwəns/</p>
@@ -37,10 +32,10 @@
                 <p>[countable] sequence (of something): a set of related events, movements, or items 
                     that follow each other in a particular order.</p>
             </div>
-        </div>
     </section>
+    </div>
+    
 
-    <!-- Header Section -->
     <header>
         <h1> “ Seeking your data's potential, one sequence at a time ”</h1>
     </header>
@@ -144,7 +139,7 @@
 
     <!-- Footer Section -->
     <footer>
-        <p>&copy; 2023 Your Full Name</p>
+        <p>&copy; 2023 Redouane Bouazza @ Seekwens</p>
     </footer>
 
     <!-- JavaScript -->
